Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-8274

Mouse clicks are broken in QML on Mac Cocoa

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 4.7.0
    • 4.7.0
    • None
    • None
    • macOS
    • 4607a42e3043c1201f4380e8090d8f66a71e10d1

      Flickable lists in QML are unusable. As is bauhaus the visual QML editor in Qt Creator. It seems clicked or released events do not fire from the mouse under Qt 4.7 for Cocoa.

      Compile Qt Creator master with Qt Master.
      Open creator and import examples/declarative.
      Open dial/dial.qml
      Switch to design mode.
      Without additional clicks you should be able to click on the dial, hold and drag it. You cannot the first time because of this bug and it renders the visual editor unusable.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            richard Richard Moe Gustavsen
            designker Nigel Hietala
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes